fix: major method fix, test deletion to new generations
