# pkg/api/routes/routes.go
@@ -1,10 +1,9 @@
-// go:build !coverage
 //go:build !coverage
 // +build !coverage
 
+// Package routes contains the routes per version
 // this package should not be tested
 // it is just an implementation and integration fo methos that are goning to be tested on integration
-
 package routes
 
 import (
@@ -12,74 +11,50 @@ import (
 	"dall06/go-cleanapi/pkg/api/controller"
 	"fmt"
 
-	"strings"
-
-	swagger "github.com/gofiber/swagger"
 	"github.com/gofiber/fiber/v2"
+	"github.com/gofiber/swagger" // swagger handler
 
 	// docs are generated by Swag CLI, you have to import them.
-	// replace with your own docs folder, usually "github.com/username/reponame/docs"
 	_ "dall06/go-cleanapi/docs"
 )
 
-type RoutesRepository interface {
+// Routes is an interface that extends routes
+type Routes interface {
 	SetV1()
 }
 
-var _ RoutesRepository = (*Routes)(nil)
+var _ Routes = (*routes)(nil)
 
-type Routes struct {
+type routes struct {
 	app        *fiber.App
 	controller controller.Controller
 }
 
-// @title Swagger Example API
-// @version 1.0
-// @description This is a sample server Petstore server.
-// @termsOfService http://swagger.io/terms/
-
-// @contact.name API Support
-// @contact.url http://www.swagger.io/support
-// @contact.email support@swagger.io
-
-// @license.name Apache 2.0
-// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
-
-// @host petstore.swagger.io
-// @BasePath /v1
-func NewRoutes(app *fiber.App, ctrl controller.Controller) RoutesRepository {
-	return Routes{
-		app:      app,
+// NewRoutes is a constructor for routes generator
+func NewRoutes(app *fiber.App, ctrl controller.Controller) Routes {
+	return &routes{
+		app:        app,
 		controller: ctrl,
 	}
 }
 
-func (routes Routes) SetV1() {
-	bp := fmt.Sprintf("%s/%s", config.ApiBasePath, "v1")
-	
-	var wp strings.Builder
-	wp.WriteString(bp)
-	wp.WriteString("/welcome")
-	welcomePath := wp.String()
+func (routes *routes) SetV1() {
+	basePath := fmt.Sprintf("%s/v1", config.APIBasePath)
+
+	welcomePath := fmt.Sprintf("%s/welcome/", basePath)
 	routes.app.Get(welcomePath, routes.controller.Permision)
 
-	var sp strings.Builder
-	sp.WriteString(bp)
-	sp.WriteString("/swagger/*")
-	swaggerPath := sp.String()
-	routes.app.Get(swaggerPath, swagger.HandlerDefault) // default
-	
-	var sb strings.Builder
-	sb.WriteString(bp)
-	sb.WriteString("/user")
-	userPath := sb.String()
-	userGroup := routes.app.Group(userPath)
-	userGroup.Get("/hello", func(c *fiber.Ctx) error {
+	swaggerPath := fmt.Sprintf("%s/swagger/*", basePath)
+	routes.app.Get(swaggerPath, swagger.HandlerDefault)
+
+	usersPath := fmt.Sprintf("%s/users", basePath)
+	usersGroup := routes.app.Group(usersPath)
+	usersGroup.Get("/hello", func(c *fiber.Ctx) error {
 		return c.SendString("welcome to go-cleanapi user path ...")
 	})
-	userGroup.Post("/", routes.controller.Post)
-	userGroup.Get("/:id", routes.controller.Get)
-	userGroup.Get("/all", routes.controller.GetAll)
-	userGroup.Put("/:id", routes.controller.Put)
-	userGroup.Delete("/:id", routes.controller.Delete)
+	usersGroup.Post("/", routes.controller.Post)
+	usersGroup.Get("/:id", routes.controller.Get)
+	usersGroup.Get("/all", routes.controller.GetAll)
+	usersGroup.Put("/:id", routes.controller.Put)
+	usersGroup.Delete("/:id", routes.controller.Delete)
 }
